finish local header css

--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
 
                                             <div class="row">
                                                 <span class="dxeBase_Mulberry Title"
-                                                    id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbt1">THÔNG TIN
-                                                    SINH VIÊN</span>
+                                                    id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbt1">
+                                                    <div class="customFontHeading1">THÔNG TIN SINH VIÊN</div> 
+                                                </span>
                                                 <hr>
                                             </div>
                                             <div class="row">
@@ -289,8 +290,9 @@
 
                                             <div class="row">
                                                 <span class="dxeBase_Mulberry Title"
-                                                    id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbT2">THÔNG TIN
-                                                    HỌC TẬP</span>
+                                                    id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbT2">
+                                                    <div class="customFontHeading1">THÔNG TIN HỌC TẬP</div>  
+                                                </span>
                                                 <hr>
                                             </div>
 
@@ -312,8 +314,9 @@
 
                                             <div class="row">
                                                 <span class="dxeBase_Mulberry Title"
-                                                    id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbT3">THÔNG TIN CÁ
-                                                    NHÂN</span>
+                                                    id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbT3">
+                                                    <div class="customFontHeading1">THÔNG TIN CÁ NHÂN</div> 
+                                                </span>
                                                 <hr>
                                             </div>
 
