hide personal info and add id to htm

--- a/index.html
+++ b/index.html
@@ -8,20 +8,13 @@
     </title>
     <link rel="stylesheet" href="main.css">
 
-    <script>
-        function onloadPage() {
-            
-        }
-    </script>
+    <script src="student-info.js"></script>
 
     <style></style>
 </head>
 
-<body 
-    id="ctl00_ctl00_Body"
-    onload= "onloadPage()"
-    >
-    
+<body id="ctl00_ctl00_Body" onload="loadStudentInfo('textContent')">
+
     <form method="post" id="aspnetForm" data-toggle="validator" role="form" novalidate="true">
         <!-- trang chu here -->
         <div class="dxpnlControl_Mulberry breadCrumbPanel" id="ctl00_ctl00_breadCrumbPane">
@@ -225,9 +218,8 @@
                                                     id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbt1">
                                                     <span class="customFontHeading1">THÔNG TIN SINH VIÊN</span>
                                                     <span class="button-container">
-                                                        <button class="btn-fix-info"
-                                                                type="button"
-                                                                onclick="window.location.href = 'Pages/change-info.html';">
+                                                        <button class="btn-fix-info" type="button"
+                                                            onclick="window.location.href = 'change-info.html';">
                                                             <img src="Content/Images/edit-solid.svg" alt="">
                                                         </button>
                                                     </span>
@@ -282,30 +274,30 @@
                                                     <span class="dxeBase_Mulberry normalText"
                                                         id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbTextInfo1">
                                                         <span class="customFontPropertyKey">Họ và tên : </span>
-                                                        <span class="customFontPropertyValue"> Bùi Hoàng Tú </span>
+                                                        <span class="customFontPropertyValue" id="ho-va-ten"> Bùi Hoàng Tú </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Năm vào trường : </span>
-                                                        <span class="customFontPropertyValue"> 2020 </span>
+                                                        <span class="customFontPropertyValue" id="nam-vao-truong"> 2020 </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Bậc đào tạo : </span>
-                                                        <span class="customFontPropertyValue"> KSCLC-TN-TT-VN-ICT
+                                                        <span class="customFontPropertyValue" id="bac-dao-tao"> KSCLC-TN-TT-VN-ICT
                                                         </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Chương trình : </span>
-                                                        <span class="customFontPropertyValue"> Công nghệ thông tin
+                                                        <span class="customFontPropertyValue" id="chuong-trinh"> Công nghệ thông tin
                                                             Việt-Pháp 2020 </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Khoa/Viện quản lý : </span>
-                                                        <span class="customFontPropertyValue"> Trường Công nghệ Thông
+                                                        <span class="customFontPropertyValue" id="khoa-quan-ly"> Trường Công nghệ Thông
                                                             tin và Truyền thông </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Tình trạng học tập : </span>
-                                                        <span class="customFontPropertyValue"> Học </span>
+                                                        <span class="customFontPropertyValue" id="tinh-trang-hoc-tap"> Học </span>
                                                         <br>
                                                     </span>
                                                 </div>
@@ -313,19 +305,19 @@
                                                     <span class="dxeBase_Mulberry normalText"
                                                         id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbTextInfo2">
                                                         <span class="customFontPropertyKey">Giới tính : </span>
-                                                        <span class="customFontPropertyValue"> Nam </span>
+                                                        <span class="customFontPropertyValue" id="gioi-tinh"> Nam </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Lớp : </span>
-                                                        <span class="customFontPropertyValue"> Việt Pháp 01-K65 </span>
+                                                        <span class="customFontPropertyValue" id="lop"> Việt Pháp 01-K65 </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Khóa học : </span>
-                                                        <span class="customFontPropertyValue"> 65 </span>
+                                                        <span class="customFontPropertyValue" id="khoa-hoc"> 65 </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Email : </span>
-                                                        <span class="customFontPropertyValue">
+                                                        <span class="customFontPropertyValue" id="email">
                                                             tu.bh200547@sis.hust.edu.vn </span>
                                                         <br>
                                                     </span>
@@ -350,11 +342,11 @@
 
                                                         <span class="customFontPropertyKey">Trung bình tích lũy :
                                                         </span>
-                                                        <span class="customFontPropertyValue"> 3.44 </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Số TC nợ đăng ký : </span>
-                                                        <span class="customFontPropertyValue"> 3 </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
                                                     </span>
                                                 </div>
@@ -362,15 +354,15 @@
                                                     <span class="dxeBase_Mulberry normalText"
                                                         id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbTextInfo4">
                                                         <span class="customFontPropertyKey">Số TC tích lũy : </span>
-                                                        <span class="customFontPropertyValue"> 108 </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Trình độ sinh viên : </span>
-                                                        <span class="customFontPropertyValue"> 4 </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Mức cảnh báo : </span>
-                                                        <span class="customFontPropertyValue"> M0 </span>
+                                                        <span class="customFontPropertyValue"> M# </span>
                                                         <br>
                                                     </span>
                                                 </div>
@@ -389,7 +381,7 @@
                                                     <span class="dxeBase_Mulberry normalText"
                                                         id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbTextInfo5">
                                                         <span class="customFontPropertyKey">Dân tộc : </span>
-                                                        <span class="customFontPropertyValue"> KINH </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Năm TN cấp 3 : </span>
@@ -397,12 +389,11 @@
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Địa chỉ : </span>
-                                                        <span class="customFontPropertyValue"> PHƯỜNG BÌNH HÀN, THÀNH
-                                                            PHỐ HẢI DƯƠNG, TỈNH HẢI DƯƠNG </span>
+                                                        <span class="customFontPropertyValue"> ## TỈNH HẢI DƯƠNG </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Số CMTND : </span>
-                                                        <span class="customFontPropertyValue"> 030***55 </span>
+                                                        <span class="customFontPropertyValue"> ##***## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Nơi cấp : </span>
@@ -410,11 +401,11 @@
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Họ tên bố : </span>
-                                                        <span class="customFontPropertyValue"> BÙI ANH TUẤN </span>
+                                                        <span class="customFontPropertyValue"> BÙI ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Năm sinh : </span>
-                                                        <span class="customFontPropertyValue"> 15-10-1975 </span>
+                                                        <span class="customFontPropertyValue"> ##-##-19## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Nghề nghiệp : </span>
@@ -422,11 +413,11 @@
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Điện thoại : </span>
-                                                        <span class="customFontPropertyValue"> 091***06 </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Email : </span>
-                                                        <span class="customFontPropertyValue"> TU*@*PT.VN </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
                                                     </span>
                                                 </div>
@@ -434,29 +425,27 @@
                                                     <span class="dxeBase_Mulberry normalText"
                                                         id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbTextInfo6">
                                                         <span class="customFontPropertyKey">Tôn giáo : </span>
-                                                        <span class="customFontPropertyValue"> KHÔNG </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Trường THPT : </span>
-                                                        <span class="customFontPropertyValue"> THPT CHUYÊN NGUYỄN TRÃI,
-                                                            THÀNH PHỐ HẢI DƯƠNG, TỈNH HẢI DƯƠNG </span>
+                                                        <span class="customFontPropertyValue"> ## TỈNH HẢI DƯƠNG </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Hộ khẩu : </span>
-                                                        <span class="customFontPropertyValue"> PHƯỜNG BÌNH HÀN, THÀNH
-                                                            PHỐ HẢI DƯƠNG, TỈNH HẢI DƯƠNG </span>
+                                                        <span class="customFontPropertyValue"> ## TỈNH HẢI DƯƠNG </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Số Điện thoại : </span>
-                                                        <span class="customFontPropertyValue"> 091***05 </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Họ tên mẹ : </span>
-                                                        <span class="customFontPropertyValue"> VŨ THỊ HẰNG </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Năm sinh : </span>
-                                                        <span class="customFontPropertyValue"> 02-09-1978 </span>
+                                                        <span class="customFontPropertyValue"> ##-##-## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Nghề nghiệp : </span>
@@ -464,11 +453,11 @@
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Điện thoại : </span>
-                                                        <span class="customFontPropertyValue"> 088***59 </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Email : </span>
-                                                        <span class="customFontPropertyValue"> VU*@*IL.COM </span>
+                                                        <span class="customFontPropertyValue"> ## </span>
                                                         <br>
                                                     </span>
                                                 </div>
