fields can be set to editable

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                                         <span class="customFontHeading1">THÔNG TIN SINH VIÊN</span>
                                                         <span class="button-container">
                                                             <button class="btn-fix-info" type="button"
-                                                                    onclick="window.location.href = 'change-info.html';">
+                                                                    onclick="setEditFields()">
                                                                 <img src="Content/Images/edit-solid.svg" alt="edit">
                                                             </button>
                                                         </span>
@@ -313,6 +313,7 @@
                                                     </span>
                                                 </div>
                                             </div>
+                                            <script src="index.js"></script>
 
                                             <div class="row">
                                                 <span class="dxeBase_Mulberry Title"
