--- a/index.html
+++ b/index.html
@@ -268,27 +268,27 @@
                                                     <span class="dxeBase_Mulberry normalText"
                                                         id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbTextInfo1">
                                                         <span class="customFontPropertyKey">Họ và tên : </span>
-                                                        <span class="customFontPropertyValue" id="ho-va-ten"> Bùi Hoàng Tú </span>
+                                                        <input class="customFontPropertyValue" id="ho-va-ten" value="Bùi Hoàng Tú">
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Năm vào trường : </span>
-                                                        <span class="customFontPropertyValue" id="nam-vao-truong"> 2020 </span>
+                                                        <input class="customFontPropertyValue" id="nam-vao-truong" value="2020">
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Bậc đào tạo : </span>
-                                                        <span class="customFontPropertyValue" id="bac-dao-tao"> KSCLC-TN-TT-VN-ICT </span>
+                                                        <input class="customFontPropertyValue" id="bac-dao-tao" value="KSCLC-TN-TT-VN-ICT">
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Chương trình : </span>
-                                                        <span class="customFontPropertyValue" id="chuong-trinh"> Công nghệ thông tin Việt-Pháp 2020 </span>
+                                                        <input class="customFontPropertyValue" id="chuong-trinh" value="Công nghệ thông tin Việt-Pháp 2020">
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Khoa/Viện quản lý : </span>
-                                                        <span class="customFontPropertyValue" id="khoa-quan-ly"> Trường Công nghệ Thông tin và Truyền thông </span>
+                                                        <input class="customFontPropertyValue" id="khoa-quan-ly" value="Trường Công nghệ Thông tin và Truyền thông">
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Tình trạng học tập : </span>
-                                                        <span class="customFontPropertyValue" id="tinh-trang-hoc-tap"> Học </span>
+                                                        <input class="customFontPropertyValue" id="tinh-trang-hoc-tap" value="Học">
                                                         <br>
                                                     </span>
                                                 </div>
@@ -296,19 +296,19 @@
                                                     <span class="dxeBase_Mulberry normalText"
                                                         id="ctl00_ctl00_contentPane_MainPanel_MainContent_lbTextInfo2">
                                                         <span class="customFontPropertyKey">Giới tính : </span>
-                                                        <span class="customFontPropertyValue" id="gioi-tinh"> Nam </span>
+                                                        <input class="customFontPropertyValue" id="gioi-tinh" value="Nam">
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Lớp : </span>
-                                                        <span class="customFontPropertyValue" id="lop"> Việt Pháp 01-K65 </span>
+                                                        <input class="customFontPropertyValue" id="lop" value="Việt Pháp 01-K65">
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Khóa học : </span>
-                                                        <span class="customFontPropertyValue" id="khoa-hoc"> 65 </span>
+                                                        <input class="customFontPropertyValue" id="khoa-hoc" value="65" readonly>
                                                         <br>
 
                                                         <span class="customFontPropertyKey">Email : </span>
-                                                        <span class="customFontPropertyValue" id="email"> tu.bh200547@sis.hust.edu.vn </span>
+                                                        <input class="customFontPropertyValue" id="email" value="tu.bh200547@sis.hust.edu.vn">
                                                         <br>
                                                     </span>
                                                 </div>
