solving reset btn

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                                     <div id="post-editing-action" class="right-div" hidden="hidden">
                                                         <a class="btn-text" href="google.com"> < OK > </a>
                                                         <a class="btn-text" onclick="restoreEditing()"> < Cancel > </a>
-                                                        <a class="btn-text" href="google.com"> < Reset > </a>
+                                                        <a class="btn-text" onclick="reset()"> < Reset > </a>
 
                                                     </div>
 
