--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                                         </span>
                                                     </div>
                                                     <div id="post-editing-action" class="right-div" hidden="hidden">
-                                                        <a class="btn-text" href="google.com"> < OK > </a>
+                                                        <a class="btn-text" onclick="save()"> < OK > </a>
                                                         <a class="btn-text" onclick="restoreEditing()"> < Cancel > </a>
                                                         <a class="btn-text" onclick="reset()"> < Reset > </a>
 
