solving img clicked

--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
 
                                                         <img class="img-thumbnail image-with-shadow"
                                                             id="ctl00_ctl00_contentPane_MainPanel_MainContent_UserImageCPanel_imgUserImage"
-                                                            src="avata.png" alt="Your img" style="width:200px;">
+                                                            src="avatar.png" alt="Your img" style="width:200px;"
+                                                            onclick="imageClicked()">
+                                                        <input type="file" id="imgSelect" name="filename" style="display: none;">
                                                     </div>
                                                     <table
                                                         id="ctl00_ctl00_contentPane_MainPanel_MainContent_UserImageCPanel_LP"
