--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 
             <div id="breadCrumb">
                 <ul class="breadCrumbList">
-
-
-
-                    <li class="start cap1"><a href="">Trang chủ</a></li>
+                    <li class="start cap1"><a href="./index.html">Trang chủ</a></li>
+                    <li class="start cap1"><a href="./thong_tin_ca_nhan.html">Thông tin cá nhân</a></li>
 
 
 
